// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStat is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStat testClass1 testClass2 emotion-euiStat-left-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props accent is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-accent"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props center is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-center"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props danger is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-danger"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props default is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props hexcode colors are rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title"
    style="color: rgb(235, 25, 25);"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props l is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props left is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props loading is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStat testClass1 testClass2 emotion-euiStat-left-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-default-isLoading"
  >
    --
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    Statistic is loading
  </p>
</div>
`;

exports[`EuiStat props m is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-m-euiStat__title-default"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props primary is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-primary"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props render with custom description element 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <div
      aria-hidden="true"
    >
      <div>
        description
      </div>
    </div>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title"
    style="color: rgb(235, 25, 25);"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props render with custom title element 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <div
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-default"
  >
    <div>
      title
    </div>
  </div>
</div>
`;

exports[`EuiStat props right is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-right"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props s is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-s-euiStat__title-default"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props subdued is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-subdued"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props success is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-success"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props title and description are reversed 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    title description
  </p>
</div>
`;

exports[`EuiStat props xs is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-xs-euiStat__title-default"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props xxs is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-xxs-euiStat__title-default"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props xxxs is rendered 1`] = `
<div
  class="euiStat emotion-euiStat-left"
>
  <div
    class="euiText euiStat__description emotion-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title emotion-euiTitle-xxxs-euiStat__title-default"
  >
    title
  </p>
  <p
    class="emotion-euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;
